Fix text contrast ratio on pinned post links
This also darkens the text color of the blog description, to
differentiate it from the pinned links.

--- a/less/new-core.less
+++ b/less/new-core.less
@@ -1,4 +1,4 @@
-@actionNavColor: #999;
+@actionNavColor: #767676;
 
 body {
 	margin: 0;
@@ -58,7 +58,7 @@ header {
 	}
 	p {
 		&.description {
-			color: #666;
+			color: #444;
 			font-size: 1.1em;
 			margin-top: 0.5em;
 			line-height: 1.5;
